--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
+/* Reset some default margin and padding for consistency */
 * {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-}
-/* Reset some default margin and padding for consistency */
-body, h1, h2, h3, p, ul, li {
-  margin: 0;
-  padding: 0;
 }
 
 /* Apply a background color and some basic styles to the body */
@@ -96,7 +92,6 @@ label {
   border: 2px solid black;
   border-radius: 8px;
   color: rgb(0, 0, 0);
-  border: solid 2px rgb(0, 0, 0);
   padding: 1px 15px;
   margin: 25px;
   width: 300px;
@@ -109,6 +104,7 @@ label {
   transition: all ease 0.2s;
 }
 
+/* Style the Sketch Pad section */
 .sketchPad {
   display: flex;
   flex-direction: column;
@@ -126,12 +122,14 @@ label {
   font-size: 25px;
 }
 
+/* Style the Sketch Container */
 .sketchContainer {
   display:flex;
   flex-direction: row;
   justify-content: center;
 }
 
+/* Style the Sketch Tools section */
 .sketchTools {
   display: flex;
   flex-direction: column;
@@ -162,7 +160,7 @@ label {
   width: 80px;
   height: 80px;
   border-radius: 50%;  
-  border: solid 2px #666;
+  border: solid 2px #ffffff;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
   align-self: center;
   transition: all ease 0.3s;
@@ -190,6 +188,7 @@ label {
   transform: scale(1.1); /* Slightly increase size on hover */
 }
 
+/* Style the grid container */
 .gridContainer {
   display: flex;
   flex-wrap: wrap;
@@ -206,6 +205,7 @@ label {
   box-sizing: border-box;
 }
 
+/* Style the footer */
 .footer {
   display: flex;
   justify-content: center;
