--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ label {
   width: 500px;
   height: 500px;
   border: 2px solid #000000;
+  cursor: url('./images/brush.png'), auto;
 }
 
 .box {
